<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--顶部标题栏布局-->
    <RelativeLayout
        android:id="@+id/title_service"
        style="@style/TitleStyle"
        android:background="@color/title_back">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/title_seccar" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/call_white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/title_height"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_white_rect"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/sec_car" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2.5dp"
                android:background="@color/light_orange"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/seccar_producre" />

            <TextView
                style="@style/HomeServiceButtonStyle"
                android:text="@string/publish_car" />

            <TextView
                style="@style/HomeServiceButtonStyle"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/look_car" />

        </LinearLayout>
    </ScrollView>

</merge>
